<resources>
    <string name="app_name">FeedbackApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="users">Users</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="surname">Nume de familie</string>
    <string name="name">Prenume</string>
    <string name="password">Parola</string>
</resources>